--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -49,8 +49,8 @@
     "@react-email/components": "0.0.28",
     "@react-email/render": "^1.0.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "bcrypt": "^5.1.1",
     "bullmq": "^5.41.3",
+    "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie": "^1.0.2",
