--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -49,7 +49,7 @@
     "@react-email/components": "0.0.28",
     "@react-email/render": "^1.0.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "2.4.3",
     "bullmq": "^5.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -80,7 +80,6 @@
     "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.9",
-    "@types/bcrypt": "^5.0.2",
     "@types/debounce": "^1.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
