--- a/package.json
+++ b/package.json
@@ -5,50 +5,28 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/platform-express": "^10.0.2",
-    "rxjs": "^7.8.0",
+    "@aws-sdk/client-s3": "^3.701.0",
+    "@aws-sdk/s3-request-presigner": "^3.701.0",
+    "@casl/ability": "^6.7.2",
     "@casl/react": "4.0.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@excalidraw/excalidraw": "^0.17.6",
+    "@fastify/cookie": "^9.4.0",
+    "@fastify/multipart": "^8.3.0",
+    "@fastify/static": "^7.0.4",
+    "@hocuspocus/extension-redis": "^2.15.2",
+    "@hocuspocus/provider": "^2.15.2",
+    "@hocuspocus/server": "^2.15.2",
+    "@hocuspocus/transformer": "^2.15.2",
+    "@joplin/turndown": "^4.0.79",
+    "@joplin/turndown-plugin-gfm": "^1.0.61",
     "@mantine/core": "^7.14.2",
     "@mantine/form": "^7.14.2",
     "@mantine/hooks": "^7.14.2",
     "@mantine/modals": "^7.14.2",
     "@mantine/notifications": "^7.14.2",
     "@mantine/spotlight": "^7.14.2",
-    "@tabler/icons-react": "^3.22.0",
-    "@tanstack/react-query": "^5.61.4",
-    "axios": "^1.7.9",
-    "clsx": "^2.1.1",
-    "emoji-mart": "^5.6.0",
-    "file-saver": "^2.0.5",
-    "i18next": "^23.14.0",
-    "i18next-http-backend": "^2.6.1",
-    "jotai": "^2.10.3",
-    "jotai-optics": "^0.4.0",
-    "js-cookie": "^3.0.5",
-    "katex": "0.16.21",
-    "lowlight": "^3.2.0",
-    "mermaid": "^11.4.1",
-    "react-arborist": "3.4.0",
-    "react-clear-modal": "^2.0.11",
-    "react-dom": "^18.3.1",
-    "react-drawio": "^1.0.1",
-    "react-error-boundary": "^4.1.2",
-    "react-helmet-async": "^2.0.5",
-    "react-i18next": "^15.0.1",
-    "react-router-dom": "^7.0.1",
-    "socket.io-client": "^4.8.1",
-    "tippy.js": "^6.3.7",
-    "tiptap-extension-global-drag-handle": "^0.1.16",
-    "zod": "^3.23.8",
-    "@aws-sdk/client-s3": "^3.701.0",
-    "@aws-sdk/s3-request-presigner": "^3.701.0",
-    "@casl/ability": "^6.7.2",
-    "@fastify/cookie": "^9.4.0",
-    "@fastify/multipart": "^8.3.0",
-    "@fastify/static": "^7.0.4",
     "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.4.9",
     "@nestjs/config": "^3.3.0",
@@ -57,6 +35,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-fastify": "^10.4.9",
     "@nestjs/platform-socket.io": "^10.4.9",
     "@nestjs/terminus": "^10.2.3",
@@ -64,37 +43,8 @@
     "@react-email/components": "0.0.28",
     "@react-email/render": "^1.0.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "bcryptjs": "2.4.3",
-    "bullmq": "^5.29.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cookie": "^1.0.2",
-    "fix-esm": "^1.0.1",
-    "fs-extra": "^11.2.0",
-    "happy-dom": "^15.11.6",
-    "kysely": "^0.27.4",
-    "kysely-migration-cli": "^0.4.2",
-    "mime-types": "^2.1.35",
-    "nanoid": "^5.0.9",
-    "nestjs-kysely": "^1.0.0",
-    "nodemailer": "^6.9.16",
-    "passport-jwt": "^4.0.1",
-    "pg": "^8.13.1",
-    "pg-tsquery": "^8.4.2",
-    "postmark": "^4.0.5",
-    "react": "^18.3.1",
-    "redis": "^4.7.0",
-    "reflect-metadata": "^0.2.2",
-    "sanitize-filename-ts": "^1.0.2",
-    "socket.io": "^4.8.1",
-    "ws": "^8.18.0",
-    "@hocuspocus/extension-redis": "^2.15.2",
-    "@hocuspocus/provider": "^2.15.2",
-    "@hocuspocus/server": "^2.15.2",
-    "@hocuspocus/transformer": "^2.15.2",
-    "@joplin/turndown": "^4.0.79",
-    "@joplin/turndown-plugin-gfm": "^1.0.61",
-    "slugify": "1.6.6",
+    "@tabler/icons-react": "^3.22.0",
+    "@tanstack/react-query": "^5.61.4",
     "@tiptap/core": "^2.11.5",
     "@tiptap/extension-code-block": "^2.11.5",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
@@ -129,27 +79,79 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/suggestion": "^2.11.5",
+    "axios": "^1.7.9",
+    "bcryptjs": "2.4.3",
+    "bullmq": "^5.29.1",
     "bytes": "^3.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
+    "emoji-mart": "^5.6.0",
+    "file-saver": "^2.0.5",
+    "fix-esm": "^1.0.1",
     "fractional-indexing-jittered": "^0.9.1",
+    "fs-extra": "^11.2.0",
+    "happy-dom": "^15.11.6",
+    "i18next": "^23.14.0",
+    "i18next-http-backend": "^2.6.1",
     "ioredis": "^5.5.0",
+    "jotai": "^2.10.3",
+    "jotai-optics": "^0.4.0",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
+    "katex": "0.16.21",
+    "kysely": "^0.27.4",
+    "kysely-migration-cli": "^0.4.2",
     "linkifyjs": "^4.2.0",
+    "lowlight": "^3.2.0",
     "marked": "^13.0.3",
+    "mermaid": "^11.4.1",
+    "mime-types": "^2.1.35",
+    "nanoid": "^5.0.9",
+    "nestjs-kysely": "^1.0.0",
+    "nodemailer": "^6.9.16",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.13.1",
+    "pg-tsquery": "^8.4.2",
+    "postmark": "^4.0.5",
     "prosemirror-view": "1.37.2",
+    "react": "^18.3.1",
+    "react-arborist": "3.4.0",
+    "react-clear-modal": "^2.0.11",
+    "react-dom": "^18.3.1",
+    "react-drawio": "^1.0.1",
+    "react-error-boundary": "^4.1.2",
+    "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.0.1",
+    "react-router-dom": "^7.0.1",
+    "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.0",
+    "sanitize-filename-ts": "^1.0.2",
+    "slugify": "1.6.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tippy.js": "^6.3.7",
+    "tiptap-extension-global-drag-handle": "^0.1.16",
     "uuid": "^11.0.5",
+    "ws": "^8.18.0",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.2.15",
-    "yjs": "^13.6.23"
+    "yjs": "^13.6.23",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.4.4",
     "@nx/eslint-plugin": "20.4.4",
+    "@nx/jest": "20.4.4",
     "@nx/js": "20.4.4",
     "@nx/nest": "^20.4.4",
     "@nx/node": "20.4.4",
@@ -162,11 +164,24 @@
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tanstack/eslint-plugin-query": "^5.62.1",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/debounce": "^1.2.4",
+    "@types/file-saver": "^2.0.7",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
+    "@types/katex": "^0.16.7",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "18.16.9",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
@@ -176,29 +191,18 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
-    "jsdom": "~22.1.0",
-    "nx": "20.4.4",
-    "prettier": "^2.6.2",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
-    "vitest": "^1.3.1",
-    "webpack-cli": "^5.1.4",
-    "@nestjs/cli": "^10.4.8",
-    "@types/debounce": "^1.2.4",
-    "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/mime-types": "^2.1.4",
-    "@types/nodemailer": "^6.4.17",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/pg": "^8.11.10",
-    "@types/supertest": "^6.0.2",
-    "@types/ws": "^8.5.13",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jsdom": "~22.1.0",
     "kysely-codegen": "^0.17.0",
+    "nx": "20.4.4",
+    "optics-ts": "^2.4.1",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^2.6.2",
     "react-email": "^3.0.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -206,14 +210,12 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "@tanstack/eslint-plugin-query": "^5.62.1",
-    "@types/file-saver": "^2.0.7",
-    "@types/js-cookie": "^3.0.6",
-    "@types/katex": "^0.16.7",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "optics-ts": "^2.4.1",
-    "postcss": "^8.4.49",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1"
+    "tslib": "^2.3.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.19.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
