--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -53,7 +53,7 @@
     "@react-email/components": "0.0.28",
     "@react-email/render": "1.0.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "2.4.3",
     "bullmq": "^5.41.3",
     "cache-manager": "^6.4.0",
     "class-transformer": "^0.5.1",
