--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,15 +16,15 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@excalidraw/excalidraw": "^0.17.6",
-    "@mantine/core": "^7.17.0",
-    "@mantine/form": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
-    "@mantine/modals": "^7.17.0",
-    "@mantine/notifications": "^7.17.0",
-    "@mantine/spotlight": "^7.17.0",
+    "@mantine/core": "7.17.0",
+    "@mantine/form": "7.17.0",
+    "@mantine/hooks": "7.17.0",
+    "@mantine/modals": "7.17.0",
+    "@mantine/notifications": "7.17.0",
+    "@mantine/spotlight": "7.17.0",
     "@tabler/icons-react": "^3.22.0",
     "@tanstack/react-query": "^5.61.4",
-    "@tiptap/extension-character-count": "^2.11.5",
+    "@tiptap/extension-character-count": "2.11.7",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
