--- a/package.json
+++ b/package.json
@@ -26,40 +26,40 @@
     "@joplin/turndown": "^4.0.74",
     "@joplin/turndown-plugin-gfm": "^1.0.56",
     "@sindresorhus/slugify": "1.1.0",
-    "@tiptap/core": "^2.10.3",
-    "@tiptap/extension-code-block": "^2.10.3",
-    "@tiptap/extension-code-block-lowlight": "^2.10.3",
-    "@tiptap/extension-collaboration": "^2.10.3",
-    "@tiptap/extension-collaboration-cursor": "^2.10.3",
-    "@tiptap/extension-color": "^2.10.3",
-    "@tiptap/extension-document": "^2.10.3",
-    "@tiptap/extension-heading": "^2.10.3",
-    "@tiptap/extension-highlight": "^2.10.3",
-    "@tiptap/extension-history": "^2.10.3",
-    "@tiptap/extension-image": "^2.10.3",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-list-item": "^2.10.3",
-    "@tiptap/extension-list-keymap": "^2.10.3",
-    "@tiptap/extension-placeholder": "^2.10.3",
-    "@tiptap/extension-subscript": "^2.10.3",
-    "@tiptap/extension-superscript": "^2.10.3",
-    "@tiptap/extension-table": "^2.10.3",
-    "@tiptap/extension-table-cell": "^2.10.3",
-    "@tiptap/extension-table-header": "^2.10.3",
-    "@tiptap/extension-table-row": "^2.10.3",
-    "@tiptap/extension-task-item": "^2.10.3",
-    "@tiptap/extension-task-list": "^2.10.3",
-    "@tiptap/extension-text": "^2.10.3",
-    "@tiptap/extension-text-align": "^2.10.3",
-    "@tiptap/extension-text-style": "^2.10.3",
-    "@tiptap/extension-typography": "^2.10.3",
-    "@tiptap/extension-underline": "^2.10.3",
-    "@tiptap/extension-youtube": "^2.10.3",
-    "@tiptap/html": "^2.10.3",
-    "@tiptap/pm": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
-    "@tiptap/suggestion": "^2.10.3",
+    "@tiptap/core": "2.11.7",
+    "@tiptap/extension-code-block": "2.11.7",
+    "@tiptap/extension-code-block-lowlight": "2.11.7",
+    "@tiptap/extension-collaboration": "2.11.7",
+    "@tiptap/extension-collaboration-cursor": "2.11.7",
+    "@tiptap/extension-color": "2.11.7",
+    "@tiptap/extension-document": "2.11.7",
+    "@tiptap/extension-heading": "2.11.7",
+    "@tiptap/extension-highlight": "2.11.7",
+    "@tiptap/extension-history": "2.11.7",
+    "@tiptap/extension-image": "2.11.7",
+    "@tiptap/extension-link": "2.11.7",
+    "@tiptap/extension-list-item": "2.11.7",
+    "@tiptap/extension-list-keymap": "2.11.7",
+    "@tiptap/extension-placeholder": "2.11.7",
+    "@tiptap/extension-subscript": "2.11.7",
+    "@tiptap/extension-superscript": "2.11.7",
+    "@tiptap/extension-table": "2.11.7",
+    "@tiptap/extension-table-cell": "2.11.7",
+    "@tiptap/extension-table-header": "2.11.7",
+    "@tiptap/extension-table-row": "2.11.7",
+    "@tiptap/extension-task-item": "2.11.7",
+    "@tiptap/extension-task-list": "2.11.7",
+    "@tiptap/extension-text": "2.11.7",
+    "@tiptap/extension-text-align": "2.11.7",
+    "@tiptap/extension-text-style": "2.11.7",
+    "@tiptap/extension-typography": "2.11.7",
+    "@tiptap/extension-underline": "2.11.7",
+    "@tiptap/extension-youtube": "2.11.7",
+    "@tiptap/html": "2.11.7",
+    "@tiptap/pm": "2.11.7",
+    "@tiptap/react": "2.11.7",
+    "@tiptap/starter-kit": "2.11.7",
+    "@tiptap/suggestion": "2.11.7",
     "bytes": "^3.1.2",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
