--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,15 +16,15 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@excalidraw/excalidraw": "0.18.0-864353b",
-    "@mantine/core": "^7.17.0",
-    "@mantine/form": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
-    "@mantine/modals": "^7.17.0",
-    "@mantine/notifications": "^7.17.0",
-    "@mantine/spotlight": "^7.17.0",
+    "@mantine/core": "7.17.7",
+    "@mantine/form": "7.17.7",
+    "@mantine/hooks": "7.17.7",
+    "@mantine/modals": "7.17.7",
+    "@mantine/notifications": "7.17.7",
+    "@mantine/spotlight": "7.17.7",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.80.6",
-    "@tiptap/extension-character-count": "^2.10.3",
+    "@tiptap/extension-character-count": "2.26.1",
     "alfaaz": "^1.1.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
