--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -54,7 +54,7 @@
     "@react-email/components": "0.0.28",
     "@react-email/render": "1.0.2",
     "@socket.io/redis-adapter": "^8.3.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "3.0.2",
     "bullmq": "^5.53.2",
     "cache-manager": "^6.4.3",
     "cheerio": "^1.1.0",
@@ -64,7 +64,7 @@
     "fs-extra": "^11.3.0",
     "happy-dom": "^15.11.6",
     "jsonwebtoken": "^9.0.2",
-    "kysely": "^0.28.2",
+    "kysely": "0.28.2",
     "kysely-migration-cli": "^0.4.2",
     "mime-types": "^2.1.35",
     "nanoid": "3.3.11",
@@ -84,7 +84,8 @@
     "stripe": "^17.5.0",
     "tmp-promise": "^3.0.3",
     "ws": "^8.18.2",
-    "yauzl": "^3.2.0"
+    "yauzl": "^3.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -108,7 +109,7 @@
     "eslint-config-prettier": "^10.0.1",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
-    "kysely-codegen": "^0.17.0",
+    "kysely-codegen": "0.18.5",
     "prettier": "^3.5.1",
     "react-email": "3.0.2",
     "source-map-support": "^0.5.21",
