--- a/package.json
+++ b/package.json
@@ -26,41 +26,41 @@
     "@joplin/turndown": "^4.0.74",
     "@joplin/turndown-plugin-gfm": "^1.0.56",
     "@sindresorhus/slugify": "1.1.0",
-    "@tiptap/core": "^2.10.3",
-    "@tiptap/extension-code-block": "^2.10.3",
-    "@tiptap/extension-code-block-lowlight": "^2.10.3",
-    "@tiptap/extension-collaboration": "^2.10.3",
-    "@tiptap/extension-collaboration-cursor": "^2.10.3",
-    "@tiptap/extension-color": "^2.10.3",
-    "@tiptap/extension-document": "^2.10.3",
-    "@tiptap/extension-heading": "^2.10.3",
-    "@tiptap/extension-highlight": "^2.10.3",
-    "@tiptap/extension-history": "^2.10.3",
-    "@tiptap/extension-image": "^2.10.3",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-list-item": "^2.10.3",
-    "@tiptap/extension-list-keymap": "^2.10.3",
-    "@tiptap/extension-placeholder": "^2.10.3",
-    "@tiptap/extension-subscript": "^2.10.3",
-    "@tiptap/extension-superscript": "^2.10.3",
-    "@tiptap/extension-table": "^2.10.3",
-    "@tiptap/extension-table-cell": "^2.10.3",
-    "@tiptap/extension-table-header": "^2.10.3",
-    "@tiptap/extension-table-row": "^2.10.3",
-    "@tiptap/extension-task-item": "^2.10.3",
-    "@tiptap/extension-task-list": "^2.10.3",
-    "@tiptap/extension-text": "^2.10.3",
-    "@tiptap/extension-text-align": "^2.10.3",
-    "@tiptap/extension-text-style": "^2.10.3",
-    "@tiptap/extension-typography": "^2.10.3",
-    "@tiptap/extension-underline": "^2.10.3",
-    "@tiptap/extension-unique-id": "^2.23.0",
-    "@tiptap/extension-youtube": "^2.10.3",
-    "@tiptap/html": "^2.10.3",
-    "@tiptap/pm": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
-    "@tiptap/suggestion": "^2.10.3",
+    "@tiptap/core": "2.26.1",
+    "@tiptap/extension-code-block": "2.26.1",
+    "@tiptap/extension-code-block-lowlight": "2.26.1",
+    "@tiptap/extension-collaboration": "2.26.1",
+    "@tiptap/extension-collaboration-cursor": "2.26.1",
+    "@tiptap/extension-color": "2.26.1",
+    "@tiptap/extension-document": "2.26.1",
+    "@tiptap/extension-heading": "2.26.1",
+    "@tiptap/extension-highlight": "2.26.1",
+    "@tiptap/extension-history": "2.26.1",
+    "@tiptap/extension-image": "2.26.1",
+    "@tiptap/extension-link": "2.26.1",
+    "@tiptap/extension-list-item": "2.26.1",
+    "@tiptap/extension-list-keymap": "2.26.1",
+    "@tiptap/extension-placeholder": "2.26.1",
+    "@tiptap/extension-subscript": "2.26.1",
+    "@tiptap/extension-superscript": "2.26.1",
+    "@tiptap/extension-table": "2.26.1",
+    "@tiptap/extension-table-cell": "2.26.1",
+    "@tiptap/extension-table-header": "2.26.1",
+    "@tiptap/extension-table-row": "2.26.1",
+    "@tiptap/extension-task-item": "2.26.1",
+    "@tiptap/extension-task-list": "2.26.1",
+    "@tiptap/extension-text": "2.26.1",
+    "@tiptap/extension-text-align": "2.26.1",
+    "@tiptap/extension-text-style": "2.26.1",
+    "@tiptap/extension-typography": "2.26.1",
+    "@tiptap/extension-underline": "2.26.1",
+    "@tiptap/extension-unique-id": "2.26.1",
+    "@tiptap/extension-youtube": "2.26.1",
+    "@tiptap/html": "2.26.1",
+    "@tiptap/pm": "2.26.1",
+    "@tiptap/react": "2.26.1",
+    "@tiptap/starter-kit": "2.26.1",
+    "@tiptap/suggestion": "2.26.1",
     "bytes": "^3.1.2",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
@@ -95,7 +95,8 @@
       "react-arborist@3.4.0": "patches/react-arborist@3.4.0.patch"
     },
     "overrides": {
-      "jsdom": "25.0.1"
+      "jsdom": "25.0.1",
+      "rollup": "4.44.2"
     },
     "neverBuiltDependencies": []
   }
