--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -54,7 +54,8 @@
     "semver": "^7.7.2",
     "socket.io-client": "^4.8.1",
     "tippy.js": "^6.3.7",
-    "tiptap-extension-global-drag-handle": "^0.1.18",
+    "tiptap-extension-global-drag-handle": "0.1.18",
+    "tiptap-extension-auto-joiner": "0.1.3",
     "zod": "^3.25.56"
   },
   "devDependencies": {
